Markut SEO: Title ve Description

--- a/content/dergi/sayi-3/sayi-3-3byazici.html
+++ b/content/dergi/sayi-3/sayi-3-3byazici.html
@@ -2,7 +2,7 @@
 title = "3 Boyutlu Yazıcı ve Uygulamaları"
 url = "sayi-3/3-boyutlu-yazici-uygulamalari/"
 date = "2020-11-01"
-seotitle = "3 Boyutlu Yazıcı ve Uygulamaları"
+seotitle = "3 Boyutlu Yazıcı Uygulamaları ve Kullanımı"
 description="3 Boyutlu yazıcıların kısa tarihi, faydaları, türleri ve uygulamaları. 3B baskı makineleri eksiltici (CNC) veya biçimlendirici (Enjeksiyonla kalıplama)..."
 aciklama="3B baskı makineleri eksiltici (CNC) veya biçimlendirici (Enjeksiyonla kalıplama) gibi geleneksel üretim teknolojilerine kıyasla parça üretmenin temelde farklı yoludur."
 thumb="/img/3b-yazici-ve-uygulamalari-markut.jpg"
